package dataControllerUtils.protobuf;

import "dataControllerUtils/Timestamp.proto";

//The parameter full identity 

message DataPayload {
extensions 15 to 107;

  optional Timestamp timestamp = 1;
  optional bytes payload = 2; 
}
