package dataControllerUtils.protobuf;

//The parameter full identity 

message DcClientMessage {
extensions 15 to 107;

  enum DcClientMessageType {
    UNKWOWN = 0;
    DATA_QUERY = 1;
    DATA_SUBSCRIBE = 2;
    DOMAIN_QUERY = 3;
  }
  
  required DcClientMessageType messageType = 2;
  required bytes payload = 3;
}
